@@ -17,9 +17,8 @@ package org.labkey.core;
 
 import com.google.common.collect.Sets;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.log4j.Appender;
-import org.apache.log4j.Logger;
-import org.apache.log4j.RollingFileAppender;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.labkey.api.admin.AdminConsoleService;
@@ -33,6 +32,7 @@ import org.labkey.api.attachments.AttachmentService;
 import org.labkey.api.audit.AuditLogService;
 import org.labkey.api.audit.ClientApiAuditProvider;
 import org.labkey.api.audit.DefaultAuditProvider;
+import org.labkey.api.audit.TransactionAuditProvider;
 import org.labkey.api.audit.provider.ContainerAuditProvider;
 import org.labkey.api.audit.provider.FileSystemAuditProvider;
 import org.labkey.api.audit.provider.GroupAuditProvider;
@@ -43,7 +43,9 @@ import org.labkey.api.data.dialect.SqlDialectRegistry;
 import org.labkey.api.data.statistics.StatsService;
 import org.labkey.api.exp.property.PropertyService;
 import org.labkey.api.exp.property.TestDomainKind;
+import org.labkey.api.external.tools.ExternalToolsViewService;
 import org.labkey.api.files.FileContentService;
+import org.labkey.api.jsp.LabKeyJspWriter;
 import org.labkey.api.markdown.MarkdownService;
 import org.labkey.api.message.settings.MessageConfigService;
 import org.labkey.api.module.FolderType;
@@ -209,6 +211,7 @@ import org.labkey.core.query.UserAuditProvider;
 import org.labkey.core.query.UsersDomainKind;
 import org.labkey.core.reader.DataLoaderServiceImpl;
 import org.labkey.core.reports.ScriptEngineManagerImpl;
+import org.labkey.core.security.ApiKeyViewProvider;
 import org.labkey.core.security.SecurityApiActions;
 import org.labkey.core.security.SecurityController;
 import org.labkey.core.security.validators.PermissionsValidator;
@@ -219,6 +222,7 @@ import org.labkey.core.thumbnail.ThumbnailServiceImpl;
 import org.labkey.core.user.UserController;
 import org.labkey.core.vcs.VcsServiceImpl;
 import org.labkey.core.view.ShortURLServiceImpl;
+import org.labkey.core.view.external.tools.ExternalToolsViewServiceImpl;
 import org.labkey.core.view.template.bootstrap.CoreWarningProvider;
 import org.labkey.core.view.template.bootstrap.ViewServiceImpl;
 import org.labkey.core.view.template.bootstrap.WarningServiceImpl;
@@ -257,7 +261,7 @@ import java.util.Set;
  */
 public class CoreModule extends SpringModule implements SearchService.DocumentProvider
 {
-    private static final Logger LOG = Logger.getLogger(CoreModule.class);
+    private static final Logger LOG = LogManager.getLogger(CoreModule.class);
 
     static
     {
@@ -290,6 +294,8 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
     {
         ContainerService.setInstance(new ContainerServiceImpl());
         FolderSerializationRegistry.setInstance(new FolderSerializationRegistryImpl());
+        ExternalToolsViewService.setInstance(new ExternalToolsViewServiceImpl());
+        ExternalToolsViewService.get().registerExternalAccessViewProvider(new ApiKeyViewProvider());
 
         // Register the default DataLoaders during init so they are available to sql upgrade scripts
         DataLoaderServiceImpl dls = new DataLoaderServiceImpl();
@@ -479,7 +485,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
     @Override
     protected Collection<WebPartFactory> createWebPartFactories()
     {
-        return new ArrayList<>(Arrays.asList(
+        return List.of(
             new AlwaysAvailableWebPartFactory("Contacts")
             {
                 @Override
@@ -657,7 +663,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                     return false;
                 }
             }
-        ));
+        );
     }
 
     @Override
@@ -691,6 +697,13 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         if (moduleContext.getInstalledVersion() < 18.30)
         {
             new CoreUpgradeCode().purgeDeveloperRole();
+        }
+
+        // Force LabKeyJspWriter to throw exceptions for unsafe operations, dev mode only.
+        // We'll remove this after 20.11, along with the experimental feature.
+        if (moduleContext.getInstalledVersion() < 20.002)
+        {
+            LabKeyJspWriter.turnOnExperimentalFeature(moduleContext.getUpgradeUser());
         }
     }
 
@@ -794,6 +807,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
             AuditLogService.get().registerAuditType(new FileSystemBatchAuditProvider());
             AuditLogService.get().registerAuditType(new ClientApiAuditProvider());
             AuditLogService.get().registerAuditType(new AuthenticationSettingsAuditTypeProvider());
+            AuditLogService.get().registerAuditType(new TransactionAuditProvider());
 
             QCStateManager.getInstance().registerQCHandler(new CoreQCStateHandler());
         }
@@ -821,18 +835,10 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                 {
                 }
 
-                Logger logger = Logger.getLogger(ActionsTsvWriter.class);
+                Logger logger = LogManager.getLogger(ActionsTsvWriter.class);
 
                 if (null != logger)
                 {
-                    LOG.info("Starting to log statistics for actions prior to web application shut down");
-                    Appender appender = logger.getAppender("ACTION_STATS");
-
-                    if (appender instanceof RollingFileAppender)
-                        ((RollingFileAppender)appender).rollOver();
-                    else
-                        Logger.getLogger(CoreModule.class).warn("Could not rollover the action stats tsv file--there was no appender named ACTION_STATS, or it is not a RollingFileAppender.");
-
                     StringBuilder buf = new StringBuilder();
 
                     try (TSVWriter writer = new ActionsTsvWriter())
@@ -841,7 +847,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                     }
                     catch (IOException e)
                     {
-                        Logger.getLogger(CoreModule.class).error("Exception exporting action stats", e);
+                        LogManager.getLogger(CoreModule.class).error("Exception exporting action stats", e);
                     }
 
                     logger.info(buf.toString());
